tests/ui/type-alias-impl-trait/implied_lifetime_wf_check3.stderr
error: lifetime may not live long enough
  --> $DIR/implied_lifetime_wf_check3.rs:28:5
   |
LL | fn test_higher_kinded_lifetime_param_test<'a>()
   |                                           -- lifetime `'a` defined here
...
LL |     test_higher_kinded_lifetime_param::assert_static::<'a>()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/implied_lifetime_wf_check3.rs:35:9
   |
LL |     fn test<'a>() {
   |             -- lifetime `'a` defined here
LL |         assert_static::<'a>()
   |         ^^^^^^^^^^^^^^^^^^^ requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

